mongoose setup with curd manager
